# 2022_ithelp_marathon

./: .gitignore  .gitlab-ci.yml  PythonBasic_2.ipynb  Python_ChatGPT_Data_Analysis.ipynb  pyproject.toml  pytest.ini  requirements.txt  用LangChain開發藥品知識庫.ipynb
.github/workflows/: python-app.yml
day_01/: README.md
day_02/: README.md  test_class_demo.py  test_demo.py
day_03/: README.md  test_demo.py
day_04/: README.md
day_04/report/: report.html  report.json
day_05/: README.md  test_demo.py
day_05/report/: cb66317c-8d8e-4783-ba30-d2042bf5b827-result.json  (+1 more)
day_06/: README.md  test_example.py  test_setup_function.py  test_setup_module.py
day_07/: README.md  fixtures.py  test_demo.py
day_08/: README.md  crud.py  fixtures.py  models.py  test_demo.py
day_09/: README.md  crud.py  test_demo.py
day_10/: README.md  test_demo.py
day_11/: README.md  fixtures.py  test_args.json  test_demo.py
day_12/: README.md  conftest.py  permission.json  test_demo.py
day_13/: README.md
day_14/: README.md  test_utils.py  utils.py
day_15/: README.md  demo.py  test_demo.py
day_16/: README.md  demo.py
day_17/: README.md  demo.py
day_18/: README.md  conftest.py  test_demo.py
day_19/: README.md  test_demo.py
day_20/: README.md  demo.py
day_21/: README.md
day_22/: README.md  test_demo.py
day_23/: README.md
day_24/: README.md
day_25/: README.md
day_26/: README.md  conftest.py  test_demo.py
day_27/: README.md  demo.py  test_demo.py
day_28/: README.md  test_demo.py
day_29/: README.md  test_demo.py
day_30/: README.md  test_demo.py
(+13 files in other folders)
