[tool.poetry]
name = "2022_ithelp_marathon"
version = "0.1.0"
description = ""
authors = ["nick <nick1998chen0725@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
mongomock = "^4.1.2"
pytest-html = "^3.1.1"
pytest-json-report = "^1.5.0"
allure-pytest = "^2.10.0"
python-dotenv = "^0.21.0"
fake-useragent = "^0.1.11"
requests = "^2.28.1"
SQLAlchemy = "^1.4.41"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
